-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

August 24 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Small bugfixes
  * The cursor is now shown properly if you are a 32x32 monster (not
    possible in the real game though)
  * Lines cut in rooms.cpp

August 22 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Coffin added to OLTerra.pcx by Kahvi
  * Pregnant wife of Petrus torso added to Humanoid.pcx by Kahvi
  * Fixed a bug in the weaponskill code

August 22 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Fixed a bug in the dagger of venom code
  * Fixed a fatal bug in the fly code
  * Whip of thievery is now less powerful when thrown
  * Some of the best monsters are now immune to thievery
  * Lines cut in materia.cpp

August 21 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Corrected a crash which occurred while wearing a Decos ad shirt
  * Ommel cerumen can no longer be wished

August 21 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Children no longer spoil
  * Items can now be hasted and slowed to speed or slow their spoiling
  * Corrected a bug in the scroll of change material code

August 17 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Implemented alcoholic guards

August 17 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * A small bug correction in the lookmode

August 17 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * You can now gift stuff to Petrus's wives
  * Some small balancing

August 16 2006 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Added first-born sons and daughters
	
August 16 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>
