@@ -401,6 +401,8 @@ Dungeon ELPURI_CAVE;
     LevelMessage = "You hear a wailing scream in the distance. An enner beast must dwell in the level!";
     IgnoreDefaultSpecialSquares = true;
     Items = 35:70;
+    EnterImage = "Enner.pcx";
+    EnterTextDisplacement = -150, 0;
 
     Square, Random;
     {
