@@ -7,6 +7,10 @@
 
 -----------------------------------------------------------------------------
 
+September 3 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>
+
+  * Added enner beast image by blob to GC5 entering screen
+
 August 24 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
   * Small bugfixes
